# coop

./: .gitignore  .goreleaser.yaml  Cargo.toml  Packager.toml  README.md  biome.json  build.rs  index.html  package.json  pnpm-lock.yaml  remove_translations.ps1  rust-toolchain.toml  rustfmt.toml  tailwind.config.js  tsconfig.json  tsr.config.json  vite.config.ts
crates/account/: Cargo.toml
crates/account/src/: lib.rs  registry.rs
crates/app/: Cargo.toml
crates/app/icons/: icon.icns
crates/app/src/: chat_space.rs  chatspace.rs  constants.rs  device.rs  main.rs  utils.rs
crates/app/src/states/: account.rs  app.rs  chat.rs  metadata.rs  mod.rs  room.rs  signal.rs  user.rs
crates/app/src/states/chat/: mod.rs  room.rs
crates/app/src/ui/: app.rs  mod.rs  onboarding.rs
crates/app/src/ui/block/: mod.rs  rooms.rs  sidebar.rs  welcome.rs
crates/app/src/ui/chat_space/: navigation.rs
crates/app/src/views/: account.rs  app.rs  chat.rs  contacts.rs  login.rs  mod.rs  new_account.rs  onboarding.rs  profile.rs  relays.rs  sidebar.rs  startup.rs  welcome.rs
crates/app/src/views/chat/: message.rs  mod.rs  room.rs
crates/auto_update/: Cargo.toml
crates/auto_update/src/: lib.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs  message.rs  registry.rs  report.rs  room.rs
crates/chat_state/: Cargo.toml
crates/chat_state/src/: inbox.rs  registry.rs  room.rs
crates/chat_ui/: Cargo.toml
crates/chat_ui/src/: actions.rs  emoji.rs  lib.rs  subject.rs  text.rs
crates/chats/: Cargo.toml
crates/chats/src/: constants.rs  lib.rs  message.rs  registry.rs  room.rs
crates/client_keys/: Cargo.toml
crates/client_keys/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: constants.rs  debounced_delay.rs  display.rs  event.rs  handle_auth.rs  last_seen.rs  lib.rs  nip05.rs  nip96.rs  paths.rs  profile.rs  qr.rs  utils.rs
crates/coop/: Cargo.toml
crates/coop/resources/: coop.desktop.in
crates/coop/resources/flatpak/: coop.metainfo.xml.in  manifest-template.json
crates/coop/resources/snap/: snapcraft.yaml.in
crates/coop/src/: actions.rs  asset.rs  chat_space.rs  chatspace.rs  lru_cache.rs  main.rs
crates/coop/src/login/: mod.rs
crates/coop/src/new_identity/: backup.rs  mod.rs
crates/coop/src/sidebar/: list_item.rs  mod.rs
crates/coop/src/user/: mod.rs  viewer.rs
crates/coop/src/views/: account.rs  backup_keys.rs  chat.rs  compose.rs  contacts.rs  edit_profile.rs  edit_relays.rs  login.rs  messaging_relays.rs  mod.rs  new_account.rs  onboarding.rs  preferences.rs  profile.rs  relays.rs  screening.rs  search.rs  settings.rs  setup_relay.rs  startup.rs  subject.rs  user_profile.rs  welcome.rs
crates/device/: Cargo.toml
crates/device/src/: constants.rs  device.rs  keystore.rs  lib.rs
crates/encryption/: Cargo.toml
crates/encryption/src/: announcement.rs  lib.rs  signer.rs
crates/global/: Cargo.toml
crates/global/src/: app_state.rs  constants.rs  identiers.rs  ingester.rs  lib.rs  paths.rs  signal.rs  state.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/key_store/: Cargo.toml
crates/key_store/src/: backend.rs  item.rs  lib.rs
crates/nostr/: Cargo.toml
crates/nostr/src/: encryption.rs  lib.rs  state.rs  storage.rs  tracker.rs
crates/person/: Cargo.toml
crates/person/src/: lib.rs  person.rs
crates/registry/: Cargo.toml
crates/registry/src/: app.rs  chat.rs  contact.rs  keystore.rs  lib.rs  message.rs  room.rs
crates/relay_auth/: Cargo.toml
crates/relay_auth/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/settings_ui/: Cargo.toml
crates/signer_proxy/: Cargo.toml  index.html  proxy.js  style.css
crates/signer_proxy/src/: error.rs  lib.rs
crates/state/: Cargo.toml
crates/state/src/: client.rs  device.rs  event.rs  gossip.rs  identity.rs  lib.rs  storage.rs  store.rs  tracker.rs
crates/states/: Cargo.toml
crates/states/src/: constants.rs  lib.rs  state.rs
crates/states/src/state/: device.rs  ingester.rs  mod.rs  signal.rs  tracker.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: lib.rs  platform_kind.rs
crates/ui/: Cargo.toml  colors.json
crates/ui/benches/: text_benchmark.rs
crates/ui/src/: accordion.rs  actions.rs  animation.rs  asset.rs  avatar.rs  badge.rs  block.rs  breadcrumb.rs  button.rs  button_group.rs  checkbox.rs  clipboard.rs  color_picker.rs  colors.rs  constants.rs  context_menu.rs  divider.rs  drawer.rs  dropdown.rs  emoji_picker.rs  event.rs  focusable.rs  history.rs  icon.rs  indicator.rs  kbd.rs  label.rs  lib.rs  link.rs  main.rs  modal.rs  notification.rs  popover.rs  popup_menu.rs  prelude.rs  progress.rs  radio.rs  root.rs  skeleton.rs  state.rs  (+12 more)
crates/ui/src/dock/: dock.rs  invalid_panel.rs  mod.rs  panel.rs  stack_panel.rs  state.rs  tab_panel.rs  tiles.rs
crates/ui/src/dock_area/: dock.rs  invalid_panel.rs  mod.rs  panel.rs  stack_panel.rs  state.rs  tab_panel.rs
crates/ui/src/input/: blink_cursor.rs  change.rs  clear_button.rs  cursor.rs  element.rs  input.rs  mask_pattern.rs  mod.rs  mode.rs  otp_input.rs  rope_ext.rs  state.rs  text_input.rs  text_wrapper.rs
crates/ui/src/input_old/: element.rs  mod.rs  state.rs
crates/ui/src/list/: list.rs  list_item.rs  loading.rs  mod.rs
crates/ui/src/menu/: app_menu_bar.rs  context_menu.rs  menu_item.rs  mod.rs  popup_menu.rs
crates/ui/src/resizable/: mod.rs  panel.rs  resize_handle.rs
crates/ui/src/scroll/: scrollable.rs  scrollable_mask.rs  scrollbar.rs
crates/ui/src/sidebar/: footer.rs  group.rs  header.rs  menu.rs  mod.rs
crates/ui/src/tab/: mod.rs  tab.rs  tab_bar.rs
crates/ui/src/theme/: colors.rs  mod.rs  scale.rs
crates/ui/src/views/: app.rs  chatspace.rs  mod.rs  onboarding.rs  setup.rs
crates/ui/src/window/: mod.rs
icons/: icon.icns
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: relays.txt
src-tauri/src/: common.rs  main.rs
src-tauri/src/commands/: account.rs  chat.rs  mod.rs  relay.rs  tray.rs
(+163 files in other folders)
