[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/coop"]

[workspace.package]
version = "1.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
coop = { path = "crates/*" }

# GPUI
gpui = { git = "https://github.com/zed-industries/zed" }
reqwest_client = { git = "https://github.com/zed-industries/zed" }

# Nostr
nostr = { git = "https://github.com/rust-nostr/nostr" }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", features = [
    "lmdb",
    "nip96",
    "nip59",
    "nip49",
    "nip44",
] }
nostr-connect = { git = "https://github.com/rust-nostr/nostr" }

# Others
reqwest = { version = "0.12", features = ["multipart", "stream", "json"] }
emojis = "0.6.4"
smol = "2"
futures = "0.3"
oneshot = "0.1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
itertools = "0.13.0"
chrono = "0.4.38"
tracing = "0.1.40"
anyhow = "1.0.44"
smallvec = "1.14.0"
rust-embed = "8.5.0"
log = "0.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
