[package]
name = "coop"
version = "0.1.0"
description = "direct message client for desktop"
authors = ["npub1zfss807aer0j26mwp2la0ume0jqde3823rmu97ra6sgyyg956e0s6xw445"]
repository = "https://github.com/lumehq/coop"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", features = [
	"sqlite",
] }
tauri = { version = "2.0.0-rc", features = [
	"tray-icon",
	"macos-private-api",
	"protocol-asset",
] }
tauri-specta = { version = "2.0.0-rc.15", features = ["derive", "typescript"] }
tauri-plugin-devtools = "2.0.0-rc"
tauri-plugin-prevent-default = "0.3"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"
tauri-plugin-process = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-decorum = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = [
	"apple-native",
	"windows-native",
	"sync-secret-service",
] }
keyring-search = "1.2.0"
itertools = "0.13.0"
futures = "0.3.30"
specta = "^2.0.0-rc.20"
specta-typescript = "0.0.7"

[target.'cfg(target_os = "macos")'.dependencies]
border = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
incremental = false
opt-level = "z"
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false
