[package]
name = "account"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
states = { path = "../states" }

gpui.workspace = true

nostr.workspace = true
nostr-sdk.workspace = true

anyhow.workspace = true
smallvec.workspace = true
smol.workspace = true
log.workspace = true
