[package]
name = "coop"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "coop"
path = "src/main.rs"

[dependencies]
ui = { path = "../ui" }
common = { path = "../common" }
state = { path = "../state" }
chats = { path = "../chats" }

gpui.workspace = true
gpui_tokio.workspace = true
reqwest_client.workspace = true

tokio.workspace = true
nostr-connect.workspace = true
nostr-sdk.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
dirs.workspace = true
rust-embed.workspace = true
smol.workspace = true

cargo-packager-updater = "0.2.2"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
log = "0.4"
