[package]
name = "auto_update"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }
global = { path = "../global" }

rust-i18n.workspace = true
i18n.workspace = true
gpui.workspace = true
nostr-sdk.workspace = true
anyhow.workspace = true
smol.workspace = true
reqwest.workspace = true
log.workspace = true

tempfile = "3.19.1"
