[package]
name = "auto_update"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }
states = { path = "../states" }
nostr = { path = "../nostr" }

gpui.workspace = true
gpui_tokio.workspace = true
reqwest.workspace = true
nostr-sdk.workspace = true
anyhow.workspace = true
smol.workspace = true
log.workspace = true
smallvec.workspace = true

semver = "1.0.27"
tempfile = "3.23.0"
