[package]
name = "chat"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }
state = { path = "../state" }
account = { path = "../account" }
person = { path = "../person" }
encryption = { path = "../encryption" }
settings = { path = "../settings" }

gpui.workspace = true
nostr-sdk.workspace = true

anyhow.workspace = true
itertools.workspace = true
smallvec.workspace = true
smol.workspace = true
log.workspace = true
futures.workspace = true
flume.workspace = true
serde.workspace = true
serde_json.workspace = true

fuzzy-matcher = "0.3.7"
