[package]
name = "chat_state"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../common" }
state = { path = "../state" }

gpui.workspace = true
nostr-sdk.workspace = true
anyhow.workspace = true
itertools.workspace = true
smol.workspace = true
chrono.workspace = true
