[package]
name = "chat_ui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ui = { path = "../ui" }
theme = { path = "../theme" }
common = { path = "../common" }
states = { path = "../states" }
account = { path = "../account" }
person = { path = "../person" }
chat = { path = "../chat" }
settings = { path = "../settings" }

gpui.workspace = true
gpui_tokio.workspace = true

nostr.workspace = true
nostr-sdk.workspace = true
anyhow.workspace = true
itertools.workspace = true
smallvec.workspace = true
smol.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

indexset = "0.12.3"
