[package]
name = "chat_ui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
state = { path = "../state" }
ui = { path = "../ui" }
theme = { path = "../theme" }
common = { path = "../common" }
account = { path = "../account" }
person = { path = "../person" }
chat = { path = "../chat" }
encryption = { path = "../encryption" }
settings = { path = "../settings" }

gpui.workspace = true
gpui_tokio.workspace = true

nostr-sdk.workspace = true
anyhow.workspace = true
itertools.workspace = true
smallvec.workspace = true
smol.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

indexset = "0.12.3"
emojis = "0.6.4"
once_cell = "1.19.0"
regex = "1"
