[package]
name = "chats"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../common" }
global = { path = "../global" }

gpui.workspace = true
nostr-sdk.workspace = true
anyhow.workspace = true
itertools.workspace = true
chrono.workspace = true
smallvec.workspace = true
smol.workspace = true
oneshot.workspace = true
log.workspace = true
