[package]
name = "chats"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
account = { path = "../account" }
common = { path = "../common" }
global = { path = "../global" }
ui = { path = "../ui" }

gpui.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
anyhow.workspace = true
itertools.workspace = true
chrono.workspace = true
smallvec.workspace = true
smol.workspace = true
oneshot.workspace = true
log.workspace = true

fuzzy-matcher = "0.3.7"
