[package]
name = "common"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
global = { path = "../global" }

gpui.workspace = true
nostr-sdk.workspace = true
anyhow.workspace = true
itertools.workspace = true
chrono.workspace = true
smallvec.workspace = true

qrcode-generator = "5.0.0"
