[package]
name = "common"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
states = { path = "../states" }

gpui.workspace = true
nostr-connect.workspace = true
nostr-sdk.workspace = true
nostr.workspace = true
anyhow.workspace = true
itertools.workspace = true
chrono.workspace = true
smallvec.workspace = true
smol.workspace = true
futures.workspace = true
reqwest.workspace = true
log.workspace = true
webbrowser.workspace = true

qrcode = "0.14.1"
