[package]
name = "coop"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "coop"
path = "src/main.rs"

[package.metadata.packager]
name = "Coop"
product-name = "Coop"
description = "Chat Freely, Stay Private on Nostr"
identifier = "su.reya.coop"
category = "SocialNetworking"
version = "0.2.9"
out-dir = "../../dist"
before-packaging-command = "cargo build --release"
resources = ["Cargo.toml", "src"]
icons = [
    "resources/32x32.png",
    "resources/128x128.png",
    "resources/128x128@2x.png",
    "resources/icon.icns",
    "resources/icon.ico",
]

[dependencies]
assets = { path = "../assets" }
ui = { path = "../ui" }
title_bar = { path = "../title_bar" }
theme = { path = "../theme" }
common = { path = "../common" }
global = { path = "../global" }
registry = { path = "../registry" }
settings = { path = "../settings" }
client_keys = { path = "../client_keys" }
auto_update = { path = "../auto_update" }
signer_proxy = { path = "../signer_proxy" }

rust-i18n.workspace = true
i18n.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
reqwest_client.workspace = true

nostr-connect.workspace = true
nostr-sdk.workspace = true
nostr.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
dirs.workspace = true
log.workspace = true
smallvec.workspace = true
smol.workspace = true
futures.workspace = true
oneshot.workspace = true
flume.workspace = true
webbrowser.workspace = true

indexset = "0.12.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
