[package]
name = "encryption"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
state = { path = "../state" }
common = { path = "../common" }
account = { path = "../account" }

gpui.workspace = true
nostr-sdk.workspace = true

anyhow.workspace = true
smallvec.workspace = true
smol.workspace = true
futures.workspace = true
flume.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
