[package]
name = "global"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
nostr-sdk.workspace = true
nostr-lmdb.workspace = true
dirs.workspace = true
smol.workspace = true
flume.workspace = true
log.workspace = true
anyhow.workspace = true
secrecy.workspace = true

whoami = "1.5.2"
rustls = "0.23.23"
