[package]
name = "registry"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }
global = { path = "../global" }
settings = { path = "../settings" }

gpui.workspace = true
nostr.workspace = true
nostr-lmdb.workspace = true
nostr-sdk.workspace = true
anyhow.workspace = true
itertools.workspace = true
smallvec.workspace = true
smol.workspace = true
log.workspace = true

fuzzy-matcher = "0.3.7"
