[package]
name = "settings"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
global = { path = "../global" }

rust-i18n.workspace = true
i18n.workspace = true

nostr-sdk.workspace = true
gpui.workspace = true
anyhow.workspace = true
log.workspace = true
smallvec.workspace = true
serde.workspace = true
serde_json.workspace = true
