[package]
name = "settings"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
global = { path = "../global" }

nostr-sdk.workspace = true
nostr-lmdb.workspace = true
gpui.workspace = true
anyhow.workspace = true
log.workspace = true
smallvec.workspace = true
serde.workspace = true
serde_json.workspace = true

paste = "1.0.15"
