[package]
name = "settings_ui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
state = { path = "../state" }
ui = { path = "../ui" }
theme = { path = "../theme" }
common = { path = "../common" }
account = { path = "../account" }
person = { path = "../person" }
settings = { path = "../settings" }

gpui.workspace = true

nostr-sdk.workspace = true
anyhow.workspace = true
itertools.workspace = true
smallvec.workspace = true
smol.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
