[package]
name = "state"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }

nostr-sdk.workspace = true
nostr-lmdb.workspace = true

gpui.workspace = true
smol.workspace = true
flume.workspace = true
log.workspace = true
anyhow.workspace = true

rustls = "0.23"
