[package]
name = "states"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
nostr-sdk.workspace = true
nostr-lmdb.workspace = true
nostr-gossip-memory.workspace = true

dirs.workspace = true
smol.workspace = true
flume.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

whoami = "1.6.1"
rustls = "0.23.23"
